# roblox_early_signal_prediction

./: .gitignore  README.md  analyze.py  analyze_genre_rotation.py  collect_buzz_data.py  collect_daily_snapshot.py  collect_genre_opportunity.py  collect_real_data.py  collect_roblox_data.py  collect_youtube_timeseries.py  data_audit.json  evaluate.py  mechanic_dna.py  prepare.py  pyproject.toml  report.py  research_program.md  scanner.py  test_daily_snapshot.py
.github/workflows/: collect-daily-snapshot.yml  collect-youtube-weekly.yml
agent_prompts/: analyst.md  data_engineer.md  reviewer.md  writer.md
data/: data_snapshot.json
data/processed/: mechanic_catalog.json  mechanic_dna.csv  roblox_real_snapshot.csv
data/raw/: roblox_buzz_metrics.csv  roblox_google_trends.csv  roblox_real_snapshot.csv  roblox_youtube_metrics.csv
data/timeseries/: collection_log.json  roblox_daily_snapshot.csv  youtube_collection_log.json  youtube_weekly.csv
outputs/: eval_result.json  findings.json  genre_rotation_findings.json  mechanic_dna_results.json  report.md  scanner_results.json
