[project]
name = "roblox_early_signal_prediction"
version = "0.1.0"
description = "AutoResearch: Roblox mid-tier game engagement anomaly as breakout predictor - precision and recall analysis"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "openpyxl>=3.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "anthropic>=0.40",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
